fix(empty-state): base reset z-index

--- a/components/empty-state/src/vwc-empty-state.scss
+++ b/components/empty-state/src/vwc-empty-state.scss
@@ -11,6 +11,7 @@ section {
 
 .illustration {
 	position: relative;
+	z-index: 0;
 	display: inline-block;
 	padding: 30px;
 
